TODO
* why is empty information value section written in info file

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20111013
* fixes for libfuse detection
* added support for OSXFuse
* fix for static executables on Cygwin
* updated libfvalue

20111009
* small changes to smrawmount

20111008
* updated configure.as and m4 files
* updated README files
* updated pc and spec file
* updated common
* updated libuna, libbfio, libhmac, libsystem

20110918
* updated spec file
* added smrawmount.1 man page
* tests: implemented libhmac
* updated msvscpp files

20110916
* merged smrawmount branch

20110901
* updated libuna, libbfio, libfvalue
* updated msvscpp files

20110831
* updated configure

20110731
* updated common, libfvalue, libmfdata

20110717
* added smraw_test_get_offset test to smraw_test_read

20110625
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated include/codepage.h, list type
* updated common, libcstring, libuna, libbfio, libfvalue, libmfdata

20110312
* updated libcstring, libuna, libbfio, libmfdata
* updated msvscpp and codegear project files
* msvscpp added VSDebug build option

20110117
* updated libuna, libbfio
